add hash check to amcheck

--- a/contrib/amcheck/meson.build
+++ b/contrib/amcheck/meson.build
@@ -6,6 +6,7 @@ amcheck_sources = files(
   'verify_gist.c',
   'verify_heapam.c',
   'verify_nbtree.c',
+  'verify_hash.c',
 )
 
 if host_system == 'windows'
@@ -27,6 +28,7 @@ install_data(
   'amcheck--1.1--1.2.sql',
   'amcheck--1.2--1.3.sql',
   'amcheck--1.3--1.4.sql',
+  'amcheck--1.4--1.5.sql',
   kwargs: contrib_data_args,
 )
 
@@ -41,6 +43,7 @@ tests += {
       'check_gin',
       'check_gist',
       'check_heap',
+      'check_hash',
     ],
   },
   'tap': {
