--- a/contrib/amcheck/Makefile
+++ b/contrib/amcheck/Makefile
@@ -7,14 +7,15 @@ OBJS = \
 	verify_gin.o \
 	verify_gist.o \
 	verify_heapam.o \
-	verify_nbtree.o
+	verify_nbtree.o \
+	verify_hash.o
 
 EXTENSION = amcheck
 DATA = amcheck--1.2--1.3.sql amcheck--1.1--1.2.sql amcheck--1.0--1.1.sql amcheck--1.0.sql \
-		amcheck--1.3--1.4.sql
+		amcheck--1.3--1.4.sql amcheck--1.4--1.5.sql
 PGFILEDESC = "amcheck - function for verifying relation integrity"
 
-REGRESS = check check_btree check_gin check_gist check_heap
+REGRESS = check check_btree check_gin check_gist check_heap check_hash
 
 TAP_TESTS = 1
 
